// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`DoodStream can guess height from title 1`] = `
[
  {
    "format": "mp4",
    "label": "DoodStream (MFP)",
    "meta": {
      "bytes": 549139251,
      "extractorId": "doodstream",
      "title": "Black Mirror S04E02 FRENCH 720p WEB x264-RiPiT",
    },
    "ttl": 21600000,
    "url": "https://mediaflow.test.org/extractor/video?host=Doodstream&api_password=test&d=http%3A%2F%2Fdood.to%2Fe%2Fdfx8me4un4ul&h_referer=http%3A%2F%2Fdood.to%2Fe%2Fdfx8me4un4ul&redirect_stream=true",
  },
]
`;

exports[`DoodStream dood.to 1`] = `
[
  {
    "format": "mp4",
    "label": "DoodStream (MFP)",
    "meta": {
      "bytes": 1395864371,
      "extractorId": "doodstream",
      "title": "des-teufels-bad-2024",
    },
    "ttl": 21600000,
    "url": "https://mediaflow.test.org/extractor/video?host=Doodstream&api_password=test&d=http%3A%2F%2Fdood.to%2Fe%2Fsk1m9eumzyjj&h_referer=http%3A%2F%2Fdood.to%2Fe%2Fsk1m9eumzyjj&redirect_stream=true",
  },
]
`;

exports[`DoodStream not found 1`] = `[]`;
